UI: Add scrollbar to Loot Creator
- Hide scrollbar on vendor when not needed

--- a/TrinityCreator/Tools/VendorCreator/VendorPage.xaml
+++ b/TrinityCreator/Tools/VendorCreator/VendorPage.xaml
@@ -22,7 +22,7 @@
         </StackPanel>
 
 
-        <ScrollViewer MinWidth="300">
+        <ScrollViewer MinWidth="300" VerticalScrollBarVisibility="Auto">
             <StackPanel Orientation="Vertical">
                 <WrapPanel x:Name="vendorEntriesWp" FlowDirection="LeftToRight">
                     <!-- VendorEntryControls go here-->
