--- a/TrinityCreator/Tools/LootCreator/LootPage.xaml
+++ b/TrinityCreator/Tools/LootCreator/LootPage.xaml
@@ -6,41 +6,42 @@
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
 	Title="LootPage">
-
-    <StackPanel>
-        <DockPanel Margin="2">
-            <TextBlock Text="Loot type"  Width="100" DockPanel.Dock="Left" Margin="5"/>
-            <ComboBox Name="lootTypeCb" SelectedIndex="0">
-                <ComboBoxItem Content="Creature" />
-                <ComboBoxItem Content="Disenchant" />
-                <ComboBoxItem Content="Fishing" />
-                <ComboBoxItem Content="GameObject" />
-                <ComboBoxItem Content="Item" />
-                <ComboBoxItem Content="Mail" />
-                <ComboBoxItem Content="Milling" />
-                <ComboBoxItem Content="Pickpocketing" />
-                <ComboBoxItem Content="Prospecting" />
-                <ComboBoxItem Content="Reference" />
-                <ComboBoxItem Content="Skinning" />
-                <ComboBoxItem Content="Spell" />
-            </ComboBox>
-        </DockPanel>
-        <DockPanel Margin="2">
-            <TextBlock Text="Loot Template ID"  Width="100" DockPanel.Dock="Left" Margin="5"/>
-            <TextBox Name="entryTb"/>
-        </DockPanel>
-        <StackPanel Name="lootRowSp"/>
-        <Button Margin="5" HorizontalAlignment="Center" Click="addLineBtn_Click">
-            <StackPanel Orientation="Horizontal" Height="25">
-                <Image Source="/TrinityCreator;component/Resources/add-icon.png" Margin="10,0" Width="20px" Height="20px" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                <TextBlock Text="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,15,0" FontSize="16"/>
-            </StackPanel>
-        </Button>
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel>
-            <Button Margin="5,20,5,0"
+            <DockPanel Margin="2">
+                <TextBlock Text="Loot type"  Width="100" DockPanel.Dock="Left" Margin="5"/>
+                <ComboBox Name="lootTypeCb" SelectedIndex="0">
+                    <ComboBoxItem Content="Creature" />
+                    <ComboBoxItem Content="Disenchant" />
+                    <ComboBoxItem Content="Fishing" />
+                    <ComboBoxItem Content="GameObject" />
+                    <ComboBoxItem Content="Item" />
+                    <ComboBoxItem Content="Mail" />
+                    <ComboBoxItem Content="Milling" />
+                    <ComboBoxItem Content="Pickpocketing" />
+                    <ComboBoxItem Content="Prospecting" />
+                    <ComboBoxItem Content="Reference" />
+                    <ComboBoxItem Content="Skinning" />
+                    <ComboBoxItem Content="Spell" />
+                </ComboBox>
+            </DockPanel>
+            <DockPanel Margin="2">
+                <TextBlock Text="Loot Template ID"  Width="100" DockPanel.Dock="Left" Margin="5"/>
+                <TextBox Name="entryTb"/>
+            </DockPanel>
+            <StackPanel Name="lootRowSp"/>
+            <Button Margin="5" HorizontalAlignment="Center" Click="addLineBtn_Click">
+                <StackPanel Orientation="Horizontal" Height="25">
+                    <Image Source="/TrinityCreator;component/Resources/add-icon.png" Margin="10,0" Width="20px" Height="20px" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                    <TextBlock Text="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,15,0" FontSize="16"/>
+                </StackPanel>
+            </Button>
+            <StackPanel>
+                <Button Margin="5,20,5,0"
                     Content="Export to SQL file" Click="exportSqlBtn_Click" />
-            <Button Margin="5,5,5,0"
+                <Button Margin="5,5,5,0"
                     Content="Export to Database" Click="exportDbBtn_Click" />
+            </StackPanel>
         </StackPanel>
-    </StackPanel>
+    </ScrollViewer>
 </Page>
